# qt_signal_analyzer

./: README.md
common/: CMakeLists.txt  signal_analyzer_device.cpp  signal_analyzer_device.hpp
common/test/: main.cpp
firmware/: .gitignore  CMakeLists.txt  README.md  build_and_flash.sh  cube_wrapper.mk  firmware_main.cpp  flash.gdbinit  test_main.cpp  toolchain.cmake
firmware/common/: CMakeLists.txt
firmware/common/include/: channel_data.h  channel_data.hpp
firmware/common/test/: CMakeLists.txt  main.cpp
firmware/cube_generated/: .mxproject  CMakeLists.txt  Makefile  cube_generated.ioc  toolchain.cmake
firmware/cube_generated/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usbd_conf.h  usbd_storage_if.h
firmware/cube_generated/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c  usbd_storage_if.c
firmware/debug_utils/: CMakeLists.txt  swo_segger.c  swo_segger.h
firmware/examples/ble_peripheral/ble_app_hrs/pca10040/s132/ses/: ble_app_hrs_pca10040_s132.emSession
firmware/nrf52832/components/libraries/pwr_mgmt/: nrf_pwr_mgmt.h
firmware/nrf52832/components/libraries/util/: app_error.h  app_util.h
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/: main.cpp  main_backup.cpp  nrf_bsp.cpp  nrf_bsp.hpp  nrf_power.cpp  nrf_power.hpp  nrf_service.cpp  nrf_service.hpp  nrf_timer.cpp  nrf_timer.hpp
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/measurement/: battery_manager.cpp  battery_manager.hpp
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/nrf_ble/: nrf_advertise.cpp  nrf_advertise.hpp  nrf_ble.cpp  nrf_ble.hpp  nrf_ble_conf.hpp  nrf_conn_params.cpp  nrf_conn_params.hpp  nrf_gap.cpp  nrf_gap.hpp  nrf_gatt.cpp  nrf_gatt.hpp  nrf_peer_manager.cpp  nrf_peer_manager.hpp
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/pca10040/s132/config/: sdk_config.h
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/pca10040/s132/ses/: ble_app_hrs_pca10040_s132.emProject  ble_app_hrs_pca10040_s132.emSession
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/pca10040/s132/ses/Output/Debug/Exe/: ble_app_hrs_pca10040_s132.hex
firmware/nrf52832/examples/ble_peripheral/ble_app_hrs/pca10040/s132/ses/Output/Release/Exe/: ble_app_hrs_pca10040_s132.elf  ble_app_hrs_pca10040_s132.hex  ble_app_hrs_pca10040_s132.map
qt/: README.md
qt/qt_signal_analyzer/: CheckboxButton.qml  CollapsibleSection.qml  ControlPanel.qml  LiveTab.qml  MainMenuBar.qml  MultiButton.qml  ScopeSetting.qml  ScopeView.qml  SideBar.qml  SliderWithText.qml  UIStyle.qml  compile_commands.json  datasource.cpp  datasource.h  main.cpp  main.qml  qml.qrc  qmldir  qt_signal_analyzer.pro
qt/qt_signal_analyzer/c++/: datasource.cpp  datasource.h  dataworker.cpp  dataworker.h  graphdatamodule.cpp  graphdatamodule.h  loggermodule.cpp  loggermodule.h  main.cpp  mathmodule.cpp  mathmodule.h  (+13 more)
(+21 files in other folders)
